# aya-syncookie

./: Cargo.toml  README.md
syncookie/: Cargo.toml  build.rs
syncookie-common/: Cargo.toml
syncookie-ebpf/: Cargo.toml
syncookie-ebpf/src/: binding.rs  main.rs  vmlinux.rs
syncookie/src/: main.rs
