[package]
name = "syncookie-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
syncookie-common = { path = "../syncookie-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "syncookie"
path = "src/main.rs"
